--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,33 @@
 <resources>
-    <string name="app_name">OrderFoodAppForEnterprise</string>
+    <string name="app_name">OrderFoodApp</string>
+    <string name="login">Login</string>
+    <string name="signup">Sign up</string>
+    <string name="forgot_password"><i><u>Forgot password?</u></i> </string>
+    <string name="enterprise_register"><i><u>Register here</u></i></string>
+    <string name="current_location"><b>Current location</b></string>
+    <string name="find_your_taste"><i>find your taste...</i></string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="checkout"><b>Checkout</b></string>
+    <string name="edit_profile"><b>Profile</b></string>
+    <string name="order_history"><b>Order History</b></string>
+    <string name="my_order"><b>My order</b></string>
+    <string name="deliver_to"><b>Deliver to</b></string>
+    <string name="coupon"><b>Coupon</b></string>
+    <string name="delivery_method"><b>Delivery method</b></string>
+    <string name="payment_method"><b>Payment method</b></string>
+    <string name="total"><b>Total:</b></string>
+    <string name="about_us_text">
+        (Tên app) is our food delivery platform that makes getting great food from your favorite local restaurants as easy as requesting a ride.<br />
+        (Tên app) app connects you with a broad range of local restaurants and food, so you can order from the full menus of your local favorites whenever you want.<br />
+    </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
