--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
         (Tên app) is our food delivery platform that makes getting great food from your favorite local restaurants as easy as requesting a ride.<br />
         (Tên app) app connects you with a broad range of local restaurants and food, so you can order from the full menus of your local favorites whenever you want.<br />
     </string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
